init: add html base structure and css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>cv</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/favicon.ico">
 </head>
 <body>
     <header>
-        <div class="header-block">
-            <p>Hello Wonderful World!!!</p>
+        <div class="name_block">
+            <div class="avatar_block">
+                <img class="avatar" src="assets/img/avatar.jpeg" alt="photo"> 
+            </div>
+            <div class="block_name">
+                <h1 class="name">Meerim Saparalieva</h1>   
+            </div>
         </div>
     </header>
+    <main>
+        <div class="main_block">
+            <aside class="contact-info_block">
+                    <h2>Contact info</h2>
+                    <ul>
+                        <li>Phone number: +37064025254</li>
+                        <li>E-mail: ddmenderes@gmail.com</li>
+                        <li><a href="https://www.linkedin.com/in/meerim-saparalieva-b952a623b/" target="_blank">LinkedIn</a></li>
+                    </ul>
+            </aside>
+            <section class="skills_block">
+                <div class="skills">
+                    <h2>Skills</h2>
+                    <ul>
+                        <li>HTML (basics)</li>
+                        <li>CSS (basics)</li>
+                        <li>JavaScript (basics)</li>
+                    </ul>
+                </div>
+                <div class="experience">
+                    <h2>Experience</h2>
+                    <ul>
+                        <li>English-Russian-Turkish translator</li>
+                        <li>Sales representative in bank</li>
+                    </ul>
+                </div>
+                <div class="education_block">
+                    <ol>
+                        <li>Master, Diplomatic Academy under The Ministry of Foreign Affairs</li>
+                        <ul>
+                            <li>Faculty of Diplomacy</li>
+                        </ul>
+                        <li>Bachelor, Kyrgyz-Turkish Manas University</li>
+                        <ul>
+                            <li>Faculty of Simultaneous Interpretation</li>
+                        </ul>
+                    </ol>
+                </ol>
+               </div>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <ul>
+            <li>2022</li>
+            <li><a href="https://www.linkedin.com/in/meerim-saparalieva-b952a623b/" target="_blank"><img src="assets/img/linkedin.svg" alt="linkedin" class="icons"></a></li>
+            <li><a href="https://github.com/meka-s" target="_blank" ><img src="assets/img/github.png" alt="github" class="icons"></a></li>
+            <li><a href="https://rs.school/js-stage0/" target="_blank"><img src="assets/img/rs_school_js.svg"  alt="rs-school" class="rsschool-icon"></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
